1. 로그인이 되있을때 답변버튼 생성 2. 작성자와 로그인된 유저가 같을때 수정/.삭제버튼 생성

--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -5,6 +5,9 @@ body,html{
     width: 100%;
     height: 100%;
 }
+body{
+	background: ghostwhite;
+}
 div#header{
     display: flex;
     justify-content: space-between;
