1. 마이페이지 jsp 작성 2. 회원 수정 구현

--- a/spMVC_grank/src/main/webapp/resources/css/join.css
+++ b/spMVC_grank/src/main/webapp/resources/css/join.css
@@ -1,124 +1,78 @@
 @charset "UTF-8";
 
-.container {
-	position: relative;
-	width: 500px;
-	padding: 40px;
-	margin: 0 auto;
-	background: #151515;
+div.join-wrapper {
+	width: 600px;
+	border: 2px solid #00b894;
+	min-height: 300px;
+	margin: 100px auto 60px auto;
 }
 
-.container h2 {
-	color: #fff;
-	margin-bottom: 45px;
-}
-
-.input-field, .input-address {
-	position: relative;
+div.join-wrapper-header {
+	background-color: #00b894;
+	height: 45px;
 	width: 100%;
+	color: #fff;
+	font-size: 25px;
+}
+
+div.join-wrapper-content {
+	width: 580px;
+	margin: 0 auto;
+}
+
+.join-header-text {
+	font-size: 25px;
+	color: #fff;
+	padding-left: 10px;
 }
 
 .input-field {
-	margin-bottom: 40px;
-}
-
-.input-address {
-	margin-bottom: 30px;
-}
-
-.input-field, .input-address {
+	width: 580px;
 	height: 40px;
+	margin-bottom: 20px;
+	background: #fff;
+	box-sizing: border-box;
+	border: solid 1px #dadada;
 }
 
-.input-field input[type="text"], .input-address input[type="text"] {
+.input-field input {
 	border: none;
-	background: transparent;
-	box-shadow: none;
-	font-size: 16px;
-	color: #fff;
-	position: absolute;
-	width: 100%;
-	outline:none;
+	width: 560px;
+	height: 20px;
+	margin-top: 8px;
+	margin-left: 10px;
 }
 
-.input-field label, .input-address label {
-	color: #555;
-	pointer-events: none;
-	display: block;
-	transition: 0.5s;
-	position: absolute;
-	top: 0;
-	left: 0;
+.join-label {
+	margin-top: 10px;
 }
 
-.input-field input[type="text"]:focus+label, .input-field input[type="text"]:valid+label,
-	.input-address input[type="text"]:focus+label, .input-address input[type="text"]:valid+label
-	{
-	transform: translateY(-25px);
+.join-label span {
 	font-size: 14px;
-	color: #00b894;
-	padding: 2px 0;
 }
 
-.input-field span, .input-address span {
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	display: block;
-	background: #555;
-	width: 100%;
-	height: 2px;
+.join-address {
+	text-align: center;
+	margin-bottom: 20px;
 }
 
-.input-field span::before, .input-address span::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: #00b894;
-	transform: scaleX(0);
-	transform-origin: right;
-	transition: transform 0.5s ease-in-out;
-}
-
-.input-field input[type="text"]:focus ~ span::before, .input-field input[type="text"]:valid 
-	~ span::before, .input-address input[type="text"]:focus ~ span::before,
-	.input-address input[type="text"]:valid ~ span::before {
-	transform: scaleX(1);
-	transform-origin: left;
-	transition: transform 0.5s ease-in-out;
-}
-
-.button-address input[type="button"] {
-	width: 100%;
-	margin-bottom: 25px;
+.address-btn {
+	width: 580px;
 	height: 30px;
-	background-color: #00b894;
-	border: none;
-	outline: none;
-	cursor: pointer;
 }
 
-.btn {
-	margin-top: 20px;
-	border: none;
-	box-shadow: none;
-	padding: 10px 25px;
-	background: #333;
-	color: #fff;
-	font-size: 16px;
-	cursor: pointer;
+.address {
+	width: 283px;
+	height: 30px;
+	border: solid 1px #dadada;
 }
-
-.btn:hover {
-	background: #00b894;
-	color: grey;
-}
-
-.join-err-msg {
-	visibility: hidden;
-	font-size: 13px;
-	color: crimson;
+#join-join-btn{
+        width: 580px;
+        height: 35px;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        font-size: 18px;
+        margin-bottom: 30px;
+        background: #00b894;
 }
