--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -1,236 +1,458 @@
 @charset "UTF-8";
-body,html{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+
+body, html {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
 }
-body{
+
+body {
 	background: ghostwhite;
 }
-div#header{
-    display: flex;
-    justify-content: space-between;
-    min-width: 1000px;
-    width: 100%;
-    height: 70px;
-    position: fixed;
-    top: 0;
-    z-index: 997;
-    background: #00b894
+
+div#header {
+	display: flex;
+	justify-content: space-between;
+	min-width: 1000px;
+	width: 100%;
+	height: 70px;
+	position: fixed;
+	top: 0;
+	z-index: 997;
+	background: #00b894
 }
-div#header img{
-	cursor:pointer;
+
+div#header img {
+	cursor: pointer;
 }
-div.wrapper{
-    width:1000px;
-    border: 2px solid #00b894;
-    min-height: 300px;
-    margin: 100px auto 60px auto;
+
+div.wrapper {
+	width: 1000px;
+	border: 2px solid #00b894;
+	min-height: 300px;
+	margin: 100px auto 60px auto;
 }
-div.wrapper-reply{
-    width:960px;
-    border: 2px solid #00b894;
-    margin: 20px auto 20px auto;
+
+div.wrapper-reply {
+	width: 960px;
+	border: 2px solid #00b894;
+	margin: 20px auto 20px auto;
 }
-div.wrapper-header{
-    background-color: #00b894;
-    height: 45px;
-    width: 100%;
-    color: #fff;
-    font-size: 25px;
+
+div.wrapper-header {
+	background-color: #00b894;
+	height: 45px;
+	width: 100%;
+	color: #fff;
+	font-size: 25px;
 }
-div.wrapper-content{
-    width: 960px;
-    margin: 0 auto;
+
+div.wrapper-content {
+	width: 960px;
+	margin: 0 auto;
 }
-.header-text{
-    font-size: 25px;
-    color: #fff;
-    padding-left: 20px;
+
+.header-text {
+	font-size: 25px;
+	color: #fff;
+	padding-left: 20px;
 }
-.flex-wrapper{
-    display: flex;
+
+.flex-wrapper {
+	display: flex;
 }
-.flex-item{
-    height: 300px;
-    display: inline-block;
+
+.flex-item {
+	height: 300px;
+	display: inline-block;
 }
-.item1{
-    width: 760px;
-    margin: 20px 10px 20px 20px;
+
+.item1 {
+	width: 760px;
+	margin: 20px 10px 20px 20px;
 }
-.item2{
-    width: 180px;
-    margin: 20px 20px 20px 10px;
+
+.item2 {
+	width: 180px;
+	margin: 20px 20px 20px 10px;
 }
-.flex-item li{
-    list-style: none;
-    margin:35px 0 35px 0;
-    font-size: 20px;
+
+.flex-item li {
+	list-style: none;
+	margin: 35px 0 35px 0;
+	font-size: 20px;
 }
-.card{
-    display: inline-block;
-    width: 100px;
-    margin: 50px 10px 30px 10px;
+
+.card {
+	display: inline-block;
+	width: 100px;
+	margin: 50px 10px 30px 10px;
 }
-.more{
-    padding-right: 20px;
+
+.more {
+	padding-right: 20px;
 }
-div#footer{
-    background-color: #00b894;
-    position: absolute;
-    margin-top: auto;
-    text-align: right;
-    width: 100%;
-    height: 100px;
+
+div#footer {
+	background-color: #00b894;
+	position: absolute;
+	margin-top: auto;
+	text-align: right;
+	width: 100%;
+	height: 100px;
 }
-div.right{
-    text-align: right;
+
+div.right {
+	text-align: right;
 }
-div.nav{
-    position: relative;
+
+div.nav {
+	position: relative;
 }
-div.nav span{
-    margin: 0 10px;
+
+div.nav span {
+	margin: 0 10px;
 }
-.dropdown{
-    position: absolute;
-    top:20px;
-    left: 40%;
+
+.dropdown {
+	position: absolute;
+	top: 20px;
+	left: 40%;
 }
-.member-nav{
-    position: absolute;
-    top:5px;
-    right: 2%;
+
+.member-nav {
+	position: absolute;
+	top: 5px;
+	right: 2%;
 }
-.dropdown button{
-    position: relative;
-    height: 30px;
-    font-size: 20px;
-    background: transparent;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    margin-right: 10px;
+
+.dropdown button {
+	position: relative;
+	height: 30px;
+	font-size: 20px;
+	background: transparent;
+	cursor: pointer;
+	border: none;
+	outline: none;
+	margin-right: 10px;
 }
-.dropdown button{
-    width:150px;
+
+.dropdown button {
+	width: 150px;
 }
-.dropdown ul{
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    width: 150px;
-    transform-origin: top;
-    transform: perspective(1000px) rotateX(-90deg);
-    transition: 0.5s;
+
+.dropdown ul {
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	width: 150px;
+	transform-origin: top;
+	transform: perspective(1000px) rotateX(-90deg);
+	transition: 0.5s;
 }
-.dropdown ul.active{
-    transform: perspective(1000px) rotateX(0deg);
+
+.dropdown ul.active {
+	transform: perspective(1000px) rotateX(0deg);
 }
-.dropdown ul li{
-    list-style: none;
+
+.dropdown ul li {
+	list-style: none;
 }
-.dropdown ul li a{
-    display: block;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    border-bottom:1px solid grey;
-    
-    color:#fff;
-    transition: 0.5s;
-    background: #00b894;
+
+.dropdown ul li a {
+	display: block;
+	padding: 10px;
+	text-align: center;
+	text-decoration: none;
+	border-bottom: 1px solid grey;
+	color: #fff;
+	transition: 0.5s;
+	background: #00b894;
 }
-.dropdown ul li a:hover{
-    background: #262626;
+
+.dropdown ul li a:hover {
+	background: #262626;
 }
-a.a-button{
-    position: relative;
-    text-transform: uppercase;
-    text-decoration: none;
-    transition: 0.5s;
-    box-sizing: border-box;
-    cursor: pointer;
+
+a.a-button {
+	position: relative;
+	text-transform: uppercase;
+	text-decoration: none;
+	transition: 0.5s;
+	box-sizing: border-box;
+	cursor: pointer;
 }
-a.a-member{
-    padding: 3px 7px;
-    font-size: 20px;
+
+a.a-member {
+	padding: 3px 7px;
+	font-size: 20px;
 }
-a.a-common,
-a.a-delete{
-    padding: 2px 6px;
+
+a.a-common, a.a-delete {
+	padding: 2px 6px;
 }
-a.a-modal-common{
-	padding:2px 20px;
+
+a.a-modal-common {
+	padding: 2px 20px;
 }
-a.a-modal-delete{
-	padding:2px 32px;
+
+a.a-modal-delete {
+	padding: 2px 32px;
 }
-a.a-button::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    transform: scaleX(0);
-    transition: transform 0.5s;
-    transform-origin: right;
+
+a.a-button::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	transform: scaleX(0);
+	transition: transform 0.5s;
+	transform-origin: right;
 }
-a.a-button:hover::after{
-    transform: scaleX(1);
-    transition: transform 0.5s;
-    transform-origin: left;
+
+a.a-button:hover::after {
+	transform: scaleX(1);
+	transition: transform 0.5s;
+	transform-origin: left;
 }
-a#join-btn,
-a#login-btn,
-a#logout-btn,
-a#mypage-btn{
-    top: 15px;
-    left: 10px;
+
+a#join-btn, a#login-btn, a#logout-btn, a#mypage-btn {
+	top: 15px;
+	left: 10px;
 }
-a.a-member{
-    color:#341f97;
-    border:2px solid #341f97;
+
+a.a-member {
+	color: #341f97;
+	border: 2px solid #341f97;
 }
-a.a-member::after{
-    background: #341f97;
+
+a.a-member::after {
+	background: #341f97;
 }
-a.a-button:hover,
-a#cancel-btn:hover{
-    color: #fff;
+
+a.a-button:hover, a#cancel-btn:hover {
+	color: #fff;
 }
-#top-btn{
-    position: fixed;
-    color: #00b894;
-    bottom: 100px;
-    right: 10px;
-    font-size: 35px;
-    display: none;
-    cursor: pointer;
+
+#top-btn {
+	position: fixed;
+	color: #00b894;
+	bottom: 100px;
+	right: 10px;
+	font-size: 35px;
+	display: none;
+	cursor: pointer;
 }
-a.a-common,
-a.a-comment,
-a.a-modal-common{
-    color:#546de5;
-    border:2px solid #546de5;
+
+a.a-common, a.a-comment, a.a-modal-common {
+	color: #546de5;
+	border: 2px solid #546de5;
 }
-a.a-common::after,
-a.a-comment::after,
-a.a-modal-common::after{
-    background: #546de5;
+
+a.a-common::after, a.a-comment::after, a.a-modal-common::after {
+	background: #546de5;
 }
-a#cancel-btn,
-a.a-delete,
-a.a-modal-delete{
-    color:crimson;
-    border:2px solid crimson;
+
+a#cancel-btn, a.a-delete, a.a-modal-delete {
+	color: crimson;
+	border: 2px solid crimson;
 }
-a#cancel-btn::after,
-a.a-delete::after,
-a.a-modal-delete::after{
-    background: crimson;
+
+a#cancel-btn::after, a.a-delete::after, a.a-modal-delete::after {
+	background: crimson;
+}
+
+.flex-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+.c-card {
+	font-size: 12px; margin : 20px;
+	width: 98px;
+	border: 1px solid black;
+	margin: 20px;
+}
+
+<!--
+flex-wrapper -->.flex-wrapper {
+	max-width: 200px;
+	margin: 0 auto;
+}
+
+.c-cards {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin-top: 15px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.c-card {
+	position: relative;
+	margin-bottom: 20px;
+	padding-bottom: 30px;
+	background: #fefff9;
+	color: #363636;
+	text-decoration: none;
+	-moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
+	-webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
+	box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+}
+
+@media ( max-width : 300px) {
+	.c-card {
+		width: 100%;
+	}
+}
+
+@media ( min-width : 700px) {
+	.c-card {
+		max-width: 320px;
+		margin-right: 20px;
+		margin-bottom: 20px;
+	}
+	.c-card:nth-child(even) {
+		margin-right: 0;
+	}
+}
+
+@media ( min-width : 980px) {
+	.c-card:nth-child(even) {
+		margin-right: 20px;
+	}
+	.c-card:nth-child(3n) {
+		margin-right: 0;
+	}
+}
+
+.c-card span {
+	display: block;
+}
+
+.c-card .card-summary {
+	padding: 5% 5% 3% 5%;
+}
+
+.c-card .card-header {
+	position: relative;
+	height: 175px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-color: rgba(255, 255, 255, 0.15);
+	background-blend-mode: overlay;
+	-moz-border-radius: 4px 4px 0 0;
+	-webkit-border-radius: 4px;
+	border-radius: 4px 4px 0 0;
+}
+
+.c-card .card-header:hover, .c-card .card-header:focus {
+	background-color: rgba(255, 255, 255, 0);
+}
+
+.c-card .card-title {
+	background: rgba(157, 187, 63, 0.85);
+	padding: 3.5% 0 2.5% 0;
+	color: white;
+	font-family: 'Roboto Condensed', sans-serif;
+	text-transform: uppercase;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
+.c-card .card-title h3 {
+	font-size: 12px;
+	line-height: 1.2;
+	padding: 0 3.5%;
+	margin: 0;
+}
+
+.c-card .card-meta {
+	max-height: 0;
+	overflow: hidden;
+	color: #666;
+	font-size: .75em;
+	text-transform: uppercase;
+	position: absolute;
+	bottom: 5%;
+	padding: 0 5%;
+	-moz-transition-property: max-height;
+	-o-transition-property: max-height;
+	-webkit-transition-property: max-height;
+	transition-property: max-height;
+	-moz-transition-duration: 0.4s;
+	-o-transition-duration: 0.4s;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
+	-moz-transition-timing-function: ease-in-out;
+	-o-transition-timing-function: ease-in-out;
+	-webkit-transition-timing-function: ease-in-out;
+	transition-timing-function: ease-in-out;
+}
+
+.c-card:hover, .c-card:focus {
+	background: white;
+	-moz-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
+	-webkit-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
+	box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
+}
+
+.c-card:hover .card-title, .c-card:focus .card-title {
+	background: rgba(157, 187, 63, 0.95);
+}
+
+.c-card:hover .card-meta, .c-card:focus .card-meta {
+	max-height: 1em;
+}
+
+img {
+	max-width: 100%;
+}
+
+body {
+	background: #f0f0f0;
+	font-size: 12px;
+	line-height: 1.6;
+	font-family: 'Jaldi', sans-serif;
+}
+
+* {
+	-moz-transition-property: background-color, border-color, box-shadow,
+		color, opacity, text-shadow, -moz-transform;
+	-o-transition-property: background-color, border-color, box-shadow,
+		color, opacity, text-shadow, -o-transform;
+	-webkit-transition-property: background-color, border-color, box-shadow,
+		color, opacity, text-shadow, -webkit-transform;
+	transition-property: background-color, border-color, box-shadow, color,
+		opacity, text-shadow, transform;
+	-moz-transition-duration: 0.2s;
+	-o-transition-duration: 0.2s;
+	-webkit-transition-duration: 0.2s;
+	transition-duration: 0.2s;
+	-moz-transition-timing-function: linear;
+	-o-transition-timing-function: linear;
+	-webkit-transition-timing-function: linear;
+	transition-timing-function: linear;
+}
+
+.more a{
+	text-decoration: none;
+	color:black;
+	font-size:20px;
 }
