--- a/spMVC_grank/src/main/webapp/resources/css/commentlist.css
+++ b/spMVC_grank/src/main/webapp/resources/css/commentlist.css
@@ -3,7 +3,9 @@
 .commentlist{
     width:940px;
     margin-left: 10px;
-    border-bottom: 1px solid grey;
+}
+.comment{
+	border-bottom:1px solid grey;
 }
 .commentlist ul{
     display: flex;
@@ -23,8 +25,17 @@
 .commentlist ul li:last-child{
     margin-left: 10px;
 }
+.commentlist ul li span{
+	font-size:13px;
+}
+.commentlist span{
+	font-size:13px;
+}
+.commentlist ul li span.reply-btn{
+	cursor: pointer;
+}
 .comment{
-    font-size: 18px;
+    font-size: 16px;
     margin: 5px 0;
 }
 div.center{
@@ -43,5 +54,14 @@ div.infocomment{
 .comment-btn{
     position: relative;
     bottom: 11px;
-    padding: 5px 6px;
+    padding: 4px 7px;
+}
+.reply-info{
+	display: flex;
+	justify-content: space-between;
+}
+#reply-err{
+	visibility: hidden;
+	padding-right: 10px;
+	color:crimson;
 }
