1. 상세게시글 클릭시 조회수 + 1(24시간에 한번씩 로그인된 회원만)

--- a/spMVC_grank/src/main/webapp/resources/css/login.css
+++ b/spMVC_grank/src/main/webapp/resources/css/login.css
@@ -80,7 +80,7 @@
 .modal-box span{
     color: #fff;
 }
-.modal-box span.err-msg{
+.modal-box span.login-err-msg{
     position: relative;
     bottom: 25px;
     visibility: hidden;
