--- a/spMVC_grank/src/main/webapp/resources/css/board-view.css
+++ b/spMVC_grank/src/main/webapp/resources/css/board-view.css
@@ -22,10 +22,13 @@
    vertical-align: top;
 }
 #view_an_btn{
-    width: 1000px;
+    width: 960px;
     margin: 20px auto;
-    
-    text-align: center;
+    display:flex;
+    justify-content: space-between;
+}
+.view-flex-item{
+	display: inline-block;
 }
 .view_button ul{
    display: flex;
@@ -41,4 +44,11 @@
 .view_button ul li:nth-child(3){
    margin-left: auto;
    margin-right: 20px;
+}
+#like-btn,#like-btn-login{
+	font-size: 24px;
+	color:crimson;
+	cursor:pointer;
+	position: relative;
+	right:10px;
 }
