--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -235,7 +235,7 @@ a.a-member::after {
 	background: #341f97;
 }
 
-a.a-button:hover, a#cancel-btn:hover,i:hover {
+a.a-button:hover, a#cancel-btn:hover,i.i-btn:hover {
 	color: #fff;
 }
 
