--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -4,7 +4,6 @@ body, html {
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	height: 100%;
 }
 
 body {
@@ -99,11 +98,24 @@ div#footer {
 	background-color: #00b894;
 	position: absolute;
 	margin-top: auto;
-	text-align: right;
 	width: 100%;
 	height: 100px;
 }
-
+.footer-ul{
+	display:flex;
+	padding-inline-start: 0;
+}
+.footer-ul li{
+	list-style: none;
+	margin: 0 10px;
+	color:	#393e46;
+}
+.footer-ul li:nth-child(4){
+	margin-left:auto;
+}
+.footer-ul li i{
+	font-size:20px;
+}
 div.right {
 	text-align: right;
 }
