1. 로그인 모델창에서 아이디 찾기 및 비밀번호 찾기 클릭시 이동 2. 아이디 찾기 구현 3. 비밀번호 구현 4. login_check.jsp에서 아이디 찾기 , 비밀번호 찾기 클릭시 이동 5. 비밀번호 찾기 할경우 비밀번호 랜덤 생성 후 비밀번호 변경한 후에 화면에 출력

--- a/spMVC_grank/src/main/webapp/resources/css/join.css
+++ b/spMVC_grank/src/main/webapp/resources/css/join.css
@@ -76,3 +76,9 @@ div.join-wrapper-content {
         margin-bottom: 30px;
         background: #00b894;
 }
+div.join-err {
+	display: none;
+	margin-top: 15px;
+	font-size: 14px;
+	color: red;
+}
