1. 본인의 게시글은 조회수가 오르지 않도록 변경 2. 파일 업로드(드래그&드롭방식) 구현

--- a/spMVC_grank/src/main/webapp/resources/css/board-list.css
+++ b/spMVC_grank/src/main/webapp/resources/css/board-list.css
@@ -79,3 +79,19 @@
 	height:28px;
 	font-size:17px;
 }
+.board-sort a{
+	text-decoration: none;
+	color:inherit;
+}
+#board-new{
+	font-size:12px;
+	color:#341f97;
+	animation-name:twinkle;
+	animation-duration:1.2s;
+	animation-iteration-count:infinite;
+}
+@keyframes twinkle{
+	0%   {opacity:0;}
+	50% {opacity:1;}
+	100%{opacity:0;}
+}
