--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -8,6 +8,7 @@ body, html {
 
 body {
 	background: ghostwhite;
+	color:#393e46;
 }
 
 div#header {
@@ -149,6 +150,7 @@ div.nav span {
 	border: none;
 	outline: none;
 	margin-right: 10px;
+	color:#393e46;
 }
 
 .dropdown button {
