1. 마이페이지에 자신이 쓴 게시글 보여주는 칸 생성 2. 게시글 작성 과정에서 이미지를 첨부하고 삭제하는 기능 구현

--- a/spMVC_grank/src/main/webapp/resources/css/board-write.css
+++ b/spMVC_grank/src/main/webapp/resources/css/board-write.css
@@ -52,14 +52,17 @@
 }
 .drag-box{
 	width:960px;
-	height:200px;
-	display:flex;
-	justify-content:center;
-	align-items:center;
+	height:100px;
+	vertical-align:middle;
 	margin: 15px auto;
 	border:1px solid #00b894;
 	box-sizing: border-box;
 }
+.drag-comment{
+	text-align:center;
+	line-height: 85px;
+	font-size:30px;
+}
 .drag-box span{
-	font-size: 30px;
+	
 }
