1. 첨부이미지 삭제 fno유무에 따라 다르게 진행하는 메서드로 변경 2. 조회수가 많은 게시글을 순서대로 5개 불러와 홈화면에 출력 3. 게시글 좋아요 오른쪽에 좋아요 개수 Ajax로 좋아요를 누름과 동시에 변경 4. 회원가입 css수정

--- a/spMVC_grank/src/main/webapp/resources/css/join.css
+++ b/spMVC_grank/src/main/webapp/resources/css/join.css
@@ -58,13 +58,20 @@ div.join-wrapper-content {
 
 .address-btn {
 	width: 580px;
-	height: 30px;
+	height: 35px;
+	border: none;
+	outline: none;
+	background: #00b894;
+	cursor: pointer;
+	font-size: 18px;
 }
 
 .address {
-	width: 283px;
+	width: 288px;
 	height: 30px;
 	border: solid 1px #dadada;
+	cursor: pointer;
+	outline: none;
 }
 #join-join-btn{
         width: 580px;
