1. 로그인 모달창 자동로그인 체크박스 생성 2. 인기 게시글을 오늘로부터 3일 이전까지의 게시글중 조회수가 높은 순서로 조정

--- a/spMVC_grank/src/main/webapp/resources/css/login.css
+++ b/spMVC_grank/src/main/webapp/resources/css/login.css
@@ -92,3 +92,35 @@
 .login-join-btn, .login-idcheck, .login-pscheck {
 	cursor: pointer;
 }
+.auto-login{
+    height: 40px;
+}
+.checkbox{
+    position: relative;
+    top: 7px;
+    width: 18px;
+    height: 18px;
+    -webkit-appearance: none;
+    transition: 0.5s;
+    margin-right: 10px;
+    outline: none;
+    cursor: pointer;
+}
+.checkbox::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #fff;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+.checkbox:checked:before{
+    border-left: none;
+    border-top: none;
+    width: 9px;
+    border-color: #00b894;
+    transform: rotate(45deg) translate(1px,-5px)
+}
