1. 게임 상세 글 랭크 리스트 출력

--- a/spMVC_grank/src/main/webapp/resources/css/gcard.css
+++ b/spMVC_grank/src/main/webapp/resources/css/gcard.css
@@ -42,3 +42,24 @@ div.g-card {
 	text-align: center;
 	justify-content: center;
 }
+
+
+.c-cards {
+	display: flex;
+}
+
+.c-cards a {
+	text-decoration: none;
+	color: black;
+}
+
+.game-nav {
+	display: flex;
+	width: 900px;
+	justify-content: space-between;
+}
+
+.game-nav li {
+	list-style: none;
+	cursor: pointer;
+}
