--- a/spMVC_grank/src/main/webapp/resources/css/gameview.css
+++ b/spMVC_grank/src/main/webapp/resources/css/gameview.css
@@ -41,3 +41,65 @@ div.wrapper-header {
 	margin-right: 10px;
 	background: #00b894;
 }
+.high-score{
+	background: #00b894;
+	border: 1px solid #00b894;
+}
+.middle-score{
+	background: yellow;
+	border: 1px solid yellow;
+}
+.low-score{
+	background: crimson;
+	border: 1px solid crimson;
+}
+.div-more{
+	margin-bottom: 10px;
+	margin-left: 5px;
+}
+
+.rank-item{
+    width: 775px;
+    margin: 20px auto;
+    border: 2px solid #00b894;
+}
+
+.award-content{
+    width: 940px;
+    margin: 0 auto;
+
+}
+.gameinfo-items{
+    display: flex;
+    width:960px;
+    margin: 20px auto;
+    border: 2px solid #00b894;
+}
+
+.score-items{
+    margin-left: 30px;
+    display: block;
+}
+
+.game-title{
+        font-size: 20px;
+        font-weight:bold;
+        color: #00b894;
+    }
+
+.score{
+        margin-top:10px;
+        font-weight:bold;
+        font-size:15px;
+       }
+div.award-wrapper-header {
+       background-color: #00b894;
+       height: 25px;
+       width: 100%;
+       color: #fff;
+   }
+.award-header-text {
+    font-size: 15px;
+    color: #fff;
+    padding-left: 20px;
+}
