1. 플랫폼별 종류 정상적으로 작동하게 만듦    redirectAttributes 사용하여 기능 구현) 2. 게임 유저 댓글 및 비평가 댓글이 없으면 댓글이 없다고 표시(사용자  UI) 3. more 버튼 코드 수정  기존 쿼리스트르링으로 받오던 값을 redirectAttributes로 변경) 4. 비평가 댓글 및 유저 댓글 및 게임상세 정보 점수가 기준치에 따라서 색깔이 변하게 추가

--- a/spMVC_grank/src/main/webapp/resources/css/gameview.css
+++ b/spMVC_grank/src/main/webapp/resources/css/gameview.css
@@ -36,10 +36,8 @@ div.wrapper-header {
 .game-score {
 	width: 20px;
 	height: 20px;
-	border: 1px solid #00b894;
 	border-radius: 5px;
 	margin-right: 10px;
-	background: #00b894;
 }
 .high-score{
 	background: #00b894;
@@ -52,6 +50,11 @@ div.wrapper-header {
 .low-score{
 	background: crimson;
 	border: 1px solid crimson;
+}
+
+.common-score{
+	background: blue;
+	border: 1px solid blue;
 }
 .div-more{
 	margin-bottom: 10px;
