1. 비밀번호변경 css수정 및 유효성검사 수정 2. 회원탈퇴 css수정 및 유효성검사 수정

--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -31,6 +31,7 @@ div.wrapper {
 	width: 1000px;
 	border: 2px solid #00b894;
 	margin: 100px auto 60px auto;
+	box-sizing: border-box;
 }
 
 div.wrapper-reply {
