--- a/spMVC_grank/src/main/webapp/resources/css/board-write.css
+++ b/spMVC_grank/src/main/webapp/resources/css/board-write.css
@@ -28,12 +28,15 @@
     margin-top: 7px;
 }
 .title-select {
+	position:relative;
+	top:2px;
     width: 100px;
     height: 20px;
 }
 .title-title-input {
     width: 910px;
     height: 20px;
+    outline:none;
 }
 .title-text {
     width: 958px;
