--- a/spMVC_grank/src/main/webapp/resources/css/member_password.css
+++ b/spMVC_grank/src/main/webapp/resources/css/member_password.css
@@ -1,26 +1,47 @@
 @charset "UTF-8";
 
 div.member_wrapper {
-    width:600px;
+	width: 600px;
 }
+
 div.member_password {
-    margin-left: 20px;
+	margin-left: 20px;
 }
+
 div.member_new_ps {
-    margin-bottom: 10px;
+	width: 560px;
+	height: 40px;
+	margin-bottom: 20px;
+	background: #fff;
+	box-sizing: border-box;
+	border: solid 1px #dadada;
 }
+
 div.member_new_password {
-    margin-bottom: 50px;
+	margin-bottom: 50px;
 }
-div.member_new_password input {
-    width: 540px;
-    height: 50px;
+
+.pass-input {
+	border: none;
+	width: 540px;
+	height: 20px;
+	margin-top: 8px;
+	margin-left: 10px;
 }
+
 div.member_password_btn {
-    text-align: center;
-    margin-top:20px;
+	text-align: center;
+	margin-top: 20px;
 	margin-bottom: 20px;
 }
+
 div.member_password_err {
-	display: none;
+	visibility: hidden;
+	margin-top: 10px;
+	font-size: 13px;
+}
+
+.member-label {
+	margin-top: 10px;
+	font-size: 14px;
 }
