--- a/spMVC_grank/src/main/webapp/resources/css/board-view.css
+++ b/spMVC_grank/src/main/webapp/resources/css/board-view.css
@@ -16,7 +16,6 @@
 }
 .view_writer th{
    font-size: 18px;
-   text-align: left;
 }
 .view_content{
    vertical-align: top;
@@ -52,3 +51,6 @@
 	position: relative;
 	right:10px;
 }
+.view-title{width:560px;text-align: left}
+.view-writer{width:180px;}
+.view-date{width:120px;}
