1. 게임 평가 순위 css 수정   1) 플랫폼 클릭했을 때  호버 효과 및  색깔 적용   2) 유저 평점 및 비평가 평점 글 색깔 적용   3) 게임명 글 색깔 변경   4) 게임 상세 테두리 생성   5) 게임 상세 플랫폼별로 색깔  다르게 적용 2. 출시예정작 css 수정   1) 플랫폼별로 색깔 다르게 적용 3. Grank 등급 생성    1) 유저 평점과 전문가 평점을 합산하여 평균을 구함    2) 평점에 맞게 등급을 매겨서 게임순위리스트에 띄워줌

--- a/spMVC_grank/src/main/webapp/resources/css/gameview.css
+++ b/spMVC_grank/src/main/webapp/resources/css/gameview.css
@@ -21,10 +21,18 @@ div.wrapper-header {
 	justify-content: space-between;
 }
 
-.review-item {
+.creview-item {
 	display: inline-block;
 	width: 460px;
 	border: 2px solid #00b894;
+	height: 100%;
+}
+
+.ureview-item {
+	display: inline-block;
+	width: 460px;
+	border: 2px solid #00b894;
+	height: 100%;
 }
 
 .review-content {
