--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -122,6 +122,10 @@ div#footer {
 .footer-ul li:nth-child(4) {
 	margin-left: auto;
 }
+.footer-ul li a{
+	text-decoration: none;
+	color:inherit;
+}
 
 .footer-ul li i {
 	font-size: 20px;
