1.게임 순위 상세보기 페이지  Grank 점수 보여주기 2.게임 내용 상세보기에서 뒤로 가기 시 Hash값을 이용해서 클릭했던 위치에 머무르게 기능 구현

--- a/spMVC_grank/src/main/webapp/resources/css/gcard.css
+++ b/spMVC_grank/src/main/webapp/resources/css/gcard.css
@@ -10,7 +10,7 @@
 
 div.g-card {
 	width: 170px;
-	height: 350px;
+	height: 370px;
 	margin: 20px 10px;
 	cursor: pointer;
 	border: 1px solid #dfe6e9;
@@ -83,8 +83,18 @@ div.g-card {
 	font-weight: bold;
 }
 
-.g-card-content span.t-score{
-	color: #e55039;
+.g-card-content span.high-score{
+	color: #ee5253;
+	font-weight: bold;
+}
+
+.g-card-content span.middle-score{
+	color: #5f27cd;
+	font-weight: bold;
+}
+
+.g-card-content span.low-score{
+	color: #4b4b4b;
 	font-weight: bold;
 }
 
