1.footer 부분 일부 수정 및 내용 추가  1) 개인정보처리방침 > 텍스트 효과 진하게 변경  2) 주소, 팀이름, 멤버, 전화번호 및 기타 내용 추가 2.header Game li 태그에서  platform 값 클릭 시 상세보기에서 platform값 같이 변경되도록 수정 3.출시예정작 파이참에서 업데이트 4.뒤로가기 시 플랫폼 값 가져가지 못했던 버그 수정

--- a/spMVC_grank/src/main/webapp/resources/css/gcard.css
+++ b/spMVC_grank/src/main/webapp/resources/css/gcard.css
@@ -61,6 +61,7 @@ div.g-card {
 	display: flex;
 	width: 900px;
 	justify-content: space-between;
+	margin: 10px 10px 10px 10px;
 }
 
 .game-nav li {
