--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -106,7 +106,7 @@ div#footer {
 	position: absolute;
 	margin-top: auto;
 	width: 100%;
-	height: 100px;
+	height: 150px;
 }
 
 .footer-ul {
@@ -125,6 +125,11 @@ div#footer {
     color: #393e46;
 }
 
+.footer-right{
+	margin: 0 10px;
+	margin-top:15px;	
+	color: #393e46;
+}
 
 .footer-ul li:nth-child(4) {
 	margin-left: auto;
@@ -138,6 +143,7 @@ div#footer {
 .footer-ul li i {
 	font-size: 20px;
 }
+
 
 div.right {
 	text-align: right;
