--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -191,7 +191,7 @@ div.nav span {
 	right: 0;
 	width: 100%;
 	height: 100%;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #393e46;
 	transform: scaleX(0);
 	transform-origin: right;
 }
