--- a/spMVC_grank/src/main/webapp/resources/css/board-list.css
+++ b/spMVC_grank/src/main/webapp/resources/css/board-list.css
@@ -58,6 +58,7 @@
 
 .pagination li {
 	list-style: none;
+	margin-bottom: 10px;
 }
 
 .pagination li a {
@@ -68,8 +69,7 @@
 	font-size: 15px;
 	text-align: center;
 	line-height: 30px;
-	background: #34495e;
-	color: #bdc3c7;
+	color: #393e46;
 	text-decoration: none;
 	margin: 5px;
 	border-radius: 4px;
@@ -82,11 +82,7 @@
 }
 
 .pagination li a.active, .pagination li a:hover {
-	color: #fff;
-	text-shadow: 0 0 15px rgb(255, 224, 27), 0 0 15px rgb(255, 224, 27), 0 0
-		15px rgb(255, 224, 27), 0 0 15px rgb(255, 224, 27), 0 0 15px
-		rgb(255, 224, 27), 0 0 15px rgb(255, 224, 27), 0 0 15px
-		rgb(255, 224, 27);
+	color: #00b894;
 }
 
 .list-search {
