--- a/spMVC_grank/src/main/webapp/resources/css/join.css
+++ b/spMVC_grank/src/main/webapp/resources/css/join.css
@@ -5,6 +5,7 @@ div.join-wrapper {
 	border: 2px solid #00b894;
 	min-height: 300px;
 	margin: 100px auto 60px auto;
+	border-radius: 5px;
 }
 
 div.join-wrapper-header {
@@ -13,6 +14,7 @@ div.join-wrapper-header {
 	width: 100%;
 	color: #fff;
 	font-size: 25px;
+	border-radius: 3px 3px 0 0;
 }
 
 div.join-wrapper-content {
@@ -64,6 +66,7 @@ div.join-wrapper-content {
 	background: #00b894;
 	cursor: pointer;
 	font-size: 18px;
+	border-radius: 5px;
 }
 
 .address {
@@ -82,6 +85,7 @@ div.join-wrapper-content {
         font-size: 18px;
         margin-bottom: 30px;
         background: #00b894;
+        border-radius: 5px;
 }
 div.join-err {
 	display: none;
