1.css수정 2.답변등록시에도 첨부파일 업로드 가능

--- a/spMVC_grank/src/main/webapp/resources/css/board-list.css
+++ b/spMVC_grank/src/main/webapp/resources/css/board-list.css
@@ -26,10 +26,13 @@
 .recordNum {
 	width: 80px;
 }
-
-.board-title {
-	width: 510px;
+.board-platform{
+	width:40px;
 }
+.board-title {
+	width: 470px;
+}
+
 .board-file{
 	width:80px;
 }
