--- a/spMVC_grank/src/main/webapp/resources/css/main.css
+++ b/spMVC_grank/src/main/webapp/resources/css/main.css
@@ -110,6 +110,7 @@ div.wrapper-content {
 
 div#footer {
 	background-color: #bdc3c7;
+	min-width:1000px;
 	position: absolute;
 	margin-top: auto;
 	width: 100%;
