--- a/spMVC_grank/src/main/webapp/resources/css/private.css
+++ b/spMVC_grank/src/main/webapp/resources/css/private.css
@@ -73,5 +73,22 @@ div.wrapper-header {
 }
 
 .scroll-item span {
+	position:relative;
 	cursor: pointer;
+}
+.scroll-item span::after{
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	border-bottom: 1px solid #393e46;
+	transform: scaleX(0);
+	transform-origin: right;
+}
+.scroll-item span:hover::after{
+	transform: scaleX(1);
+	transition: transform 0.5s;
+	transform-origin: left;
 }
