--- a/spMVC_grank/src/main/webapp/resources/css/searchbox.css
+++ b/spMVC_grank/src/main/webapp/resources/css/searchbox.css
@@ -87,7 +87,8 @@
     width: 980px;
     margin: 0 auto;
     font-size: 20px;
-    border-bottom: 2px solid #00b894;
+    border-bottom: 2px solid grey;
+    padding:3px 0;
 }
 .search-result-item:last-child {
 	margin-bottom: 10px;
